Changelog

KEY:
	+ Addition
	- Removal
	~ Change
	* Bug fix
	# Note
	
Version 1:
	+ Teach command
	+ Vault support
	+ Change spell with right click
	+ Spell confringo
	