@@ -14,17 +14,21 @@ import com.lavacraftserver.HarryPotterSpells.Spell;
 
 public class Teach extends JavaPlugin {
 	
+	
 	public static void teach(CommandSender sender, String[] args) {
 		Player player = (Player)sender;
 		if(args.length != 2) {
 			PM.warn(player, "Correct Syntax: /teach <player> <spell>");
 		} else {
-			if(!Spell.values().toString().toLowerCase().contains(args[1].toLowerCase())) {
-				PM.warn(player, "The spell type was not recognised.");
+			Player teachTo = Bukkit.getPlayer(args[0]);
+			String stringSpell = args[1].toUpperCase();
+			Spell spell;  
+			try {
+				spell = Spell.valueOf(stringSpell);
+			} catch (IllegalArgumentException e) {
+				PM.warn(player, "The spell type was not recognised!");
 				return;
 			}
-			Player teachTo = Bukkit.getPlayer(args[0]);
-			Spell spell = Spell.valueOf(args[1]);  
 			if(teachTo != null) {
 				List<String> list = PlayerSpellConfig.getPSC().getStringList(teachTo.getName());
 				list.add(spell.toString());
@@ -41,23 +45,25 @@ public class Teach extends JavaPlugin {
 	
 	public static void teachConsole(String[] args) {
 		if(args.length != 2) {
-			PM.log("Correct Syntax: /teach <player> <spell>", Level.WARNING);
+			PM.log("Correct Syntax: /teach <player> <spell>", Level.INFO);
 		} else {
-			if(!Spell.values().toString().toLowerCase().contains(args[1].toLowerCase())) {
-				PM.log("The spell type was not recognised.", Level.WARNING);
+			Player teachTo = Bukkit.getPlayer(args[0]);
+			Spell spell = null;  
+			try {
+				spell = Spell.valueOf(args[1]);
+			} catch (IllegalArgumentException e) {
+				PM.log("The spell type was not recognised!", Level.INFO);
 				return;
 			}
-			Player teachTo = Bukkit.getPlayer(args[0]);
-			Spell spell = Spell.valueOf(args[1].toUpperCase());  
-			if(spell != null && teachTo != null) {
+			if(teachTo != null) {
 				List<String> list = PlayerSpellConfig.getPSC().getStringList(teachTo.getName());
 				list.add(spell.toString());
 				PlayerSpellConfig.getPSC().set(teachTo.getName(), list);
 				PlayerSpellConfig.savePSC();
 				PM.log("You have taught " + teachTo.getName() + " the spell " + spell.toString() + ".", Level.INFO);
-				PM.tell(teachTo, "You have been taught " + spell.toString() + "!");
+				PM.tell(teachTo, "You have been taught " + spell.toString());
 			} else {
-				PM.log("The player was not found", Level.WARNING);
+				PM.log("The player was not found.", Level.INFO);
 				return;
 			}
 		}
