@@ -12,4 +12,5 @@ Version 1:
 	+ Vault support
 	+ Change spell with right click
 	+ Spell confringo
+	* /teach only works if spell is in upper case
 	
